Bug 145491 - Highlighting of current slide in slide sorter vanishes after undoing the deletion of an element
Summary: Highlighting of current slide in slide sorter vanishes after undoing the dele...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
: 140067 149364 (view as bug list)
Depends on:
Blocks: Slide-Page-Pane Undo-Redo
  Show dependency treegraph
 
Reported: 2021-11-01 12:34 UTC by ffs
Modified: 2022-11-24 18:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ffs 2021-11-01 12:34:06 UTC
Normally when I'm editing a slide the slide I am editing is highlighted in the slide sorter on the LHS.  

However, if I delete an element and the undo the delete (possibly other things) the highlighting in the slide sort vanishes and for as long as I continue to edit that slide I can't tell which slide it is in the sequence.

Now because of misbehaviour in the animation sequences for LO it's common practice to fake animations with sequences of very similar slides and it's quite irritating for this highlighting to vanish.
Comment 1 Buovjaga 2022-11-18 13:41:52 UTC
Bibisected with linux-64-5.2 to https://git.libreoffice.org/core/commit/a0de7474400ae0a84daf688de12c9344d028df93
move the KeepSlideSorterInSyncWithPageChanges to a level lower
Comment 2 Buovjaga 2022-11-18 13:42:16 UTC
*** Bug 149364 has been marked as a duplicate of this bug. ***
Comment 3 Caolán McNamara 2022-11-23 15:32:04 UTC
@Buovjaga what steps did you use, to make sure I'm looking at the same thing
Comment 4 Caolán McNamara 2022-11-23 16:25:11 UTC
*** Bug 140067 has been marked as a duplicate of this bug. ***
Comment 5 Buovjaga 2022-11-23 16:58:01 UTC
(In reply to Caolán McNamara from comment #3)
> @Buovjaga what steps did you use, to make sure I'm looking at the same thing

I deleted a placeholder box and undid it. There is no need to add new slides.
Comment 6 Commit Notification 2022-11-23 19:46:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/27c44ebd3c93c2a37f50bfa7e42caa9ecf825cc9

Resolves: tdf#145491 make sure focused page is selected after undo/redo

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2022-11-23 19:48:23 UTC
hmm, I can't reproduce the missing highlight with just comment #5, but can with the steps in bug 140067. Not sure that I've fixed this issue then, though it does touch the bisected commit, so it'll need your double check.
Comment 8 Buovjaga 2022-11-23 21:52:34 UTC
(In reply to Caolán McNamara from comment #7)
> hmm, I can't reproduce the missing highlight with just comment #5, but can
> with the steps in bug 140067. Not sure that I've fixed this issue then,
> though it does touch the bisected commit, so it'll need your double check.

Eh, now I feel silly. I can't repro this with even 7.4. I might have skipped testing with a fresh version and for some reason jumped into old versions - I can't explain the result otherwise.

I certainly can't repro with

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 164d717530aff8d2581d0a2ff249f83aabb27502
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 9 Caolán McNamara 2022-11-24 08:52:47 UTC
lets's call it fixed then. Backport to 7-4 in gerrit
Comment 10 Commit Notification 2022-11-24 18:27:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/e940f28d57d87212b2a160c9a6ac69009f35b867

Resolves: tdf#145491 make sure focused page is selected after undo/redo

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.