Resolves: tdf#145491 make sure focused page is selected after undo/redo

Change-Id: I269315556624c48373815640605a93c91a4c9819
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143184
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>